@@ -62,7 +62,7 @@ import org.xml.sax.helpers.XMLReaderFactory;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.SAXTFactoryTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.SAXTFactoryTest
  * @run testng/othervm javax.xml.transform.ptests.SAXTFactoryTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
